--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 .rating-card,
 .result-card {
     width: 22%;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,11 +43,10 @@ body {
     border-radius: 20px;
 }
 .star-logo {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
-    background-color: var(--very-dark-blue);
-    margin-top: 20px;
+    background-color:hsl(213, 17%, 21%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +55,7 @@ main {
     width: 85%;
     height: 85%;
 }
-h2 {
+h1 {
     color: var(--white);
     font-size: 1.5rem;
     font-weight: 700;
@@ -77,7 +77,7 @@ p {
     border-radius: 50%;
     line-height: 35px;
     margin-top: 20px;
-    background-color: var(--light-grey);
+    background-color: hsl(213, 17%, 21%);
     text-align: center;
     font-size: 15px;
     cursor: pointer;
@@ -85,6 +85,7 @@ p {
     justify-content: center;
     align-items: center;
     transition: 0.3s ease-in-out;
+    color: var(--white);
 }
 .rating-number:hover {
     background-color: var(--orange);
@@ -101,7 +102,7 @@ p {
     width: 100%;
     color: var(--white);
     background-color: var(--orange);
-    padding: 8px 0;
+    padding: 12px 0;
     margin: 20px 0;
     letter-spacing: 2px;
     border-radius: 40px;
@@ -145,7 +146,7 @@ p {
     padding: 5px 10px;
     border-radius: 40px;
 }
-h1 {
+h2 {
     font-weight: 300;
     font-size: 0.8rem;
     color: var(--white);
@@ -156,23 +157,25 @@ h1 {
     margin: 10px auto;
     color: var(--light-grey);
 }
+.link {
+    text-decoration: none;
+    color: var(--orange);
+}
 
-/* attribution */
+
+
+
 
 
 .attribution {
     position: fixed;
-    bottom: 20px;
+    bottom: 0;
+    left: 0;
     width: 100%;
     text-align: center;
     font-size: 0.8rem;
     color: var(--light-grey);
-} 
-.link {
-    color: var(--orange);
-    text-decoration: none;
 }
-
 
 /* responsive display */
 
