--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
 /* card style */
 .rating-card,
 .result-card {
-    width: 22%;
-    height: 50vh;
+    width: 27%;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,7 +103,7 @@ p {
     color: var(--white);
     background-color: var(--orange);
     padding: 12px 0;
-    margin: 20px 0;
+    margin-top: 27px;
     letter-spacing: 2px;
     border-radius: 40px;
     border: none;
